--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
+  --icons-color: #FFDF2B;
+  --icons-light-color: #ffdf2b57;
+  --icons-bg-color: #FFDF2B;
+  --shadow-dark-color: #555557;
+  --bg-shadow-dark-color: #555557;
+  --shadow-light-color: #232325;
   --main-bg-color: #232325;
+  --overlay: #2323255e;
+
+  --box-shadow: 1px 1px 2px #FFDF2B,
+  -1px -1px 2px #FFDF2B;
+
+  --box-shadow-2:1px 1px 2px #FFDF2B,
+  -1px -1px 2px #FFDF2B;
+
 }
 
 html,
