--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root {
-  --icons-color: #9001f5;
-  --icons-light-color: #9001f557;
-  --icons-bg-color: #9001f5;
-  --shadow-dark-color: #312f32;
-  --bg-shadow-dark-color: #312f32;
-  --shadow-light-color: #000000;
-  --main-bg-color: #000000;
+:root{
+  --icons-color: #4c5773;
+  --icons-light-color: #4c577341;
+  --icons-bg-color: #e2e6e9;
+  --shadow-dark-color: #d3dae7;
+  --bg-shadow-dark-color: #d3dae745;
+  --shadow-light-color: #fff;
+  --main-bg-color: #ecf0f3;
+  --box-shadow: 1rem 1rem 1rem var(--shadow-dark-color),
+  -1rem -1rem 1rem var(--shadow-light-color);
+  --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
+  -.3rem -.3rem 1rem var(--shadow-dark-color)
+} 
 
-  --box-shadow: 1px 1px 2px #9001f5, -1px -1px 2px #9001f5;
+/* :root{
+  --icons-color: #FFDF2B;
+  --icons-light-color: #ffdf2b57;
+  --icons-bg-color: #FFDF2B;
+  --shadow-dark-color: #555557;
+  --bg-shadow-dark-color: #555557;
+  --shadow-light-color: #232325;
+  --main-bg-color: #232325;
+  --overlay: #2323255e;
 
-  --box-shadow-2: 1px 1px 2px #9001f5, -1px -1px 2px #9001f5;
-}
+  --box-shadow: 1px 1px 2px #FFDF2B,
+  -1px -1px 2px #FFDF2B;
+
+  --box-shadow-2:1px 1px 2px #FFDF2B,
+  -1px -1px 2px #FFDF2B;
+
+} */
 
 html,
 body {
@@ -70,7 +88,7 @@ a {
   background: var(--icons-color);
   width: 0.5rem;
 }
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -78,4 +96,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
